<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionFavourite"
        android:icon="@mipmap/ic_star_border_white_24dp"
        android:orderInCategory="100"
        android:title="Favourite"
        app:showAsAction="always" />

    <item
        android:id="@+id/actionShare"
        android:icon="@mipmap/ic_share_white_24dp"
        android:orderInCategory="100"
        android:title="Share"
        app:showAsAction="always" />
</menu>