<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="35dp"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/advertHistory"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/blue"
        android:foreground="?android:attr/selectableItemBackground"
        android:textColor="@color/white" />

</LinearLayout>